K8S/adminapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminapi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminapiservice
  template:
    metadata:
      labels:
        app: adminapiservice
    spec:
      containers:
      - name: adminapiservice
        image: renosatyaadrians/adminservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: adminapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: adminapiservice
  ports:
  - name: adminapiservice
    protocol: TCP
    port: 80
    targetPort: 80
