K8S/adminapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminapiservice-srv
spec:
  type: NodePort
  selector:
    app: adminapiservice
  ports:
  - name: adminapiservice
    protocol: TCP
    port: 80
    targetPort: 80
