K8S/driverapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: driverapiservice-srv
spec:
  type: NodePort
  selector:
    app: driverapiservice
  ports:
  - name: driverapiservice
    protocol: TCP
    port: 80
    targetPort: 80
