K8S/orderapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderapiservice-srv
spec:
  type: NodePort
  selector:
    app: orderapiservice
  ports:
  - name: orderapiservice
    protocol: TCP
    port: 80
    targetPort: 80
