K8S/userapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapiservice-srv
spec:
  type: NodePort
  selector:
    app: userapiservice
  ports:
  - name: userapiservice
    protocol: TCP
    port: 80
    targetPort: 80
