K8S/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: devbootcamp-ojek.co.id
    http:
      paths:
       - backend:
          service:
            name: userapi-clusterip-srv
            port: 
              number: 80
         path: /api/Users
         pathType: Prefix
       - backend:
          service:
            name: driverapi-clusterip-srv
            port:
              number: 80
         path: /api/Administrations
         pathType: Prefix
       - backend:
          service:
            name: driverapi-clusterip-srv
            port:
              number: 80
         path: /api/Orders
         pathType: Prefix
       - backend:
          service:
            name: driverapi-clusterip-srv
            port:
              number: 80
         path: /api/Profiles
         pathType: Prefix
       - backend:
          service:
            name: orderapi-clusterip-srv
            port:
              number: 80
         path: /api/Drivers
         pathType: Prefix
       - backend:
          service:
            name: adminapi-clusterip-srv
            port:
              number: 80
         path: /api/Admin
         pathType: Prefix
